<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/worker_nav_menu.xml"
    app:startDestination="@+id/navigation_worker">

        <fragment
            android:id="@+id/navigation_record"
            android:name="com.example.myapplication.ui.record.RecordFragment"
            android:label="@string/title_record"
            tools:layout="@layout/fragment_record" />

        <fragment
            android:id="@+id/navigation_worker"
            android:name="com.example.myapplication.ui.order.Worker_intro"
            android:label="@string/title_worker_order"
            tools:layout="@layout/fragment_worker_order" />
        <fragment
            android:id="@+id/navigation_wallet"
            android:name="com.example.myapplication.ui.wallet.WalletFragment"
            android:label="@string/title_wallet"
            tools:layout="@layout/fragment_wallet" />
        <fragment
            android:id="@+id/navigation_profile"
            android:name="com.example.myapplication.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile" />


</navigation>